--- a/src/app/usersignup/usersignup.component.html
+++ b/src/app/usersignup/usersignup.component.html
@@ -13,36 +13,58 @@
                        <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter your first name" formControlName="firstName" 
                        [ngClass]="{ 'is-invalid': signUpForm.get('personName.firstName').invalid && ( signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) ,
                        'is-valid': signUpForm.get('personName.firstName').valid && ( signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) }">
+                       <span class="text-danger" *ngIf="signUpForm.get('personName.firstName').invalid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) && signUpForm.get('personName.firstName').errors?.required">First Name Cant be blank</span>
+                       <span class="text-danger" *ngIf="signUpForm.get('personName.firstName').invalid && (signUpForm.get('personName.firstName').dirty || signUpForm.get('personName.firstName').touched || signUpForm.submitted) && signUpForm.get('personName.firstName').errors?.minlength">First Name should contains atleat 5 characters</span>
                     </div>
                  </div>
                  <div class="form-group row" formGroupName="personName">
                     <label for="lastname" class="col-sm-2 col-form-label">lastname</label>
                     <div class="col-sm-10">
-                       <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter your last name" formControlName="lastName">
+                       <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter your last name" formControlName="lastName"
+                       [ngClass]="{ 'is-invalid': signUpForm.get('personName.lastName').invalid && ( signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) ,
+                       'is-valid': signUpForm.get('personName.lastName').valid && ( signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) }">
+                       <span class="text-danger" *ngIf="signUpForm.get('personName.lastName').invalid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) && signUpForm.get('personName.lastName').errors?.required">Last Name Cant be blank</span>
+                       <span class="text-danger" *ngIf="signUpForm.get('personName.lastName').invalid && (signUpForm.get('personName.lastName').dirty || signUpForm.get('personName.lastName').touched || signUpForm.submitted) && signUpForm.get('personName.lastName').errors?.minlength">Last Name should contains atleat 5 characters</span>
                     </div>
                  </div>
                  <div class="form-group row">
                   <label for="email" class="col-sm-2 col-form-label">Email</label>
                   <div class="col-sm-10">
-                    <input type="number" class="form-control" id="phonenumber" name="phonenumber" placeholder="enter your phone number" formControlName="mobile">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Enter your Email ID" formControlName="email"
+                    [ngClass]="{ 'is-invalid': signUpForm.get('email').invalid && ( signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) ,
+                       'is-valid': signUpForm.get('email').valid && ( signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) }">
+                       <span class="text-danger" *ngIf="signUpForm.get('email').invalid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) && signUpForm.get('email').errors?.required">Email required</span>
+                       <span class="text-danger" *ngIf="signUpForm.get('email').invalid && (signUpForm.get('email').dirty || signUpForm.get('email').touched || signUpForm.submitted) && signUpForm.get('email').errors?.pattern">Invalid Email Pattern</span>
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="phone" class="col-sm-2 col-form-label">Phone Number</label>
                   <div class="col-sm-10">
-                    <input type="email" class="form-control" id="email" name="email" placeholder="enter your email id" formControlName="email">
+                    <input type="number" class="form-control" id="phonenumber" name="phonenumber" placeholder="Enter your phone number" formControlName="mobile"
+                    [ngClass]="{ 'is-invalid': signUpForm.get('mobile').invalid && ( signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) ,
+                       'is-valid': signUpForm.get('mobile').valid && ( signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) }">
+                       <span class="text-danger" *ngIf="signUpForm.get('mobile').invalid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) && signUpForm.get('mobile').errors?.required">Mobile Number required</span>
+                       <span class="text-danger" *ngIf="signUpForm.get('mobile').invalid && (signUpForm.get('mobile').dirty || signUpForm.get('mobile').touched || signUpForm.submitted) && signUpForm.get('mobile').errors?.pattern">Invalid mobile number</span>
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="password" class="col-sm-2 col-form-label">Password</label>
                   <div class="col-sm-10">
-                    <input type="password" class="form-control" id="password" name="password" placeholder="Password" formControlName="password">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password" formControlName="password"
+                    [ngClass]="{ 'is-invalid': signUpForm.get('password').invalid && ( signUpForm.get('password').dirty || signUpForm.get('password').touched || signUpForm.submitted) ,
+                       'is-valid': signUpForm.get('password').valid && ( signUpForm.get('password').dirty || signUpForm.get('password').touched || signUpForm.submitted) }">
+                       <span class="text-danger" *ngIf="signUpForm.get('password').invalid && (signUpForm.get('password').dirty || signUpForm.get('password').touched || signUpForm.submitted) && signUpForm.get('password').errors?.required">password required</span>
+                       <span class="text-danger" *ngIf="signUpForm.get('password').invalid && (signUpForm.get('password').dirty || signUpForm.get('password').touched || signUpForm.submitted) && signUpForm.get('password').errors?.minLength">Invalid password</span>
                   </div>
                 </div>
                 <div class="form-group row">
                   <label for="confirmpassword" class="col-sm-2 col-form-label">Confirm Password</label>
                   <div class="col-sm-10">
-                    <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password" formControlName="confirmpassword">
+                    <input type="password" class="form-control" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password" formControlName="confirmpassword" appConfirmpassword="password"
+                    [ngClass]="{ 'is-invalid': signUpForm.get('confirmpassword').invalid && ( signUpForm.get('confirmpassword').dirty || signUpForm.get('confirmpassword').touched || signUpForm.submitted) ,
+                       'is-valid': signUpForm.get('confirmpassword').valid && ( signUpForm.get('confirmpassword').dirty || signUpForm.get('confirmpassword').touched || signUpForm.submitted) }">
+                       <span class="text-danger" *ngIf="signUpForm.get('confirmpassword').invalid && (signUpForm.get('confirmpassword').dirty || signUpForm.get('confirmpassword').touched || signUpForm.submitted) && signUpForm.get('confirmpassword').errors?.required">confirm password required</span>
+                       <span class="text-danger" *ngIf="signUpForm.get('confirmpassword').invalid && (signUpForm.get('confirmpassword').dirty || signUpForm.get('confirmpassword').touched || signUpForm.submitted) && signUpForm.get('confirmpassword').errors?.notEqual">password doesnt match</span>
                   </div>
                 </div>
                 <div class="form-group row">
@@ -59,12 +81,16 @@
                 <div class="form-group row">
                   <label for="countryId" class="col-md-4 col-form-label">Country</label>
                   <div class="col-md-8">
-                    <select name="countryId" id="countryId" class="form-control" formControlName="CountryId">
+                    <select name="countryId" id="countryId" class="form-control" formControlName="CountryId" [ngClass]="{ 'is-invalid': signUpForm.get('CountryId').invalid && ( signUpForm.get('CountryId').dirty || signUpForm.get('CountryId').touched || signUpForm.submitted) ,
+                    'is-valid': signUpForm.get('CountryId').valid && ( signUpForm.get('CountryId').dirty || signUpForm.get('CountryId').touched || signUpForm.submitted) }">
+                    
                       <option value="null">Please Select</option>
                       <option *ngFor="let country of countries" [value]="country.CountryID">
                         {{country.CountryName}}
                       </option>
                     </select>
+                    <span class="text-danger" *ngIf="signUpForm.get('CountryId').invalid && (signUpForm.get('CountryId').dirty || signUpForm.get('CountryId').touched || signUpForm.submitted) && signUpForm.get('CountryId').errors?.required">country Id Required</span>
+                       <span class="text-danger" *ngIf="signUpForm.get('CountryId').invalid && (signUpForm.get('CountryId').dirty || signUpForm.get('CountryId').touched || signUpForm.submitted) && signUpForm.get('CountryId').errors?.minLength">Invalid country Id Required</span>
                   </div>
                 </div>
 
