--- a/src/app/usernavheader/usernavheader.component.html
+++ b/src/app/usernavheader/usernavheader.component.html
@@ -27,6 +27,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="usersignup">Login</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="aggrid">Ag grid</a>
+      </li>
       
      
     </ul>
